video overflow fix

--- a/fe-hashveenah-portfolio/src/index.css
+++ b/fe-hashveenah-portfolio/src/index.css
@@ -304,7 +304,7 @@ swiper-container {
     margin: 0 5vw;
 }
 .video-container-video {
-    width: 100vw;
+    width: 99vw;
     height: 300px;
 }
 .video-container-credit {
